# order-management-system

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: __init__.py  app.py  decorators.py  in_memory_storage.py  models.py  order_tracker.py
backend/tests/: test_api.py  test_models.py  test_order_tracker.py
docs/: Udacity Project README.md  Udacity-Project-README.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: script.js
